--- a/app/views/work_print_label/print_label.html.erb
+++ b/app/views/work_print_label/print_label.html.erb
@@ -2,3 +2,5 @@
 
 
 <p>Labels would appear in Print Preview mode or print directly</p>
+
+<p>use Online label OL8250WX for formatting.  This is 2"x5" label 8 labels/sheet.  The data in each label is identical </p>
