--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,7 +81,7 @@
     background-color: white;
     color: blue;
     text-align: left;
-    height: 15px;
+    height: 5px;
     font-weight: bold;
     font-size:large
     }    
@@ -106,3 +106,12 @@
     font-weight: bold;
     font-size:large
     }     
+    
+.whitespace10px {
+    border-collapse:collapse;
+    padding:0px;
+    background-color: white;
+    color: white;
+    height: 10px;
+    }    
+    
