--- a/app/views/recipe/show2.html.erb
+++ b/app/views/recipe/show2.html.erb
@@ -30,7 +30,8 @@
     </tr>
   <% end %>
 </table>
-
+<p class="whitespace10px"></p>  
+<p class="whitespace10px"></p>  
 
 
 <!--Ingredients -->
@@ -68,6 +69,8 @@
     </tr>
   <% end %>
 </table>
+<p class="whitespace10px"></p>  
+<p class="whitespace10px"></p>  
 
 
 
