--- a/app/views/recipe/show3.html.erb
+++ b/app/views/recipe/show3.html.erb
@@ -6,15 +6,15 @@
 </table>
 
 
-<!--Misc -->
-  <p class="sectionheader">Misc:</p>
+<!--Serving Info -->
+  <p class="sectionheader">Serving Info:</p>
   
   <table class="table2">
-    <col style="width:15%">
-    <col style="width:15%">
-    <col style="width:15%">
-    <col style="width:15%">
-    <col style="width:15%">
+    <col style="width:20%">
+    <col style="width:20%">
+    <col style="width:20%">
+    <col style="width:20%">
+    <col style="width:20%">
     
     <tr class="tableheader1">
       <th>Serving Size</th>
@@ -34,18 +34,20 @@
       </tr>
     <% end %>
   </table>
-  
+<p class="whitespace10px"></p>  
+<p class="whitespace10px"></p>  
+
 
 <!--Nutritionals1 -->
   <p class="sectionheader">Nutritionals:</p>
   
   <table class="table2">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
     
     <tr class="tableheader1">
       <th>Calories</th>
@@ -53,7 +55,7 @@
       <th>%Calories from Fat</th>
       <th>Saturated fat (g)</th>
       <th>%Calories from Saturated Fat</th>
-      <th>Trans Fat</th>
+      <th>Trans Fat (g)</th>
     </tr>
     
     <% @t_recipe.each do |tbl| %>
@@ -73,20 +75,20 @@
   <p></p>
   
   <table class="table2">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
+    <col style="width:15%">
     
     <tr class="tableheader1">
-      <th>Cholesterol</th>
-      <th>Sodium</th>
-      <th>Total Carb</th>
-      <th>Fiber</th>
-      <th>Sugar</th>
-      <th>Protein</th>
+      <th>Cholesterol (mg)</th>
+      <th>Sodium (mg)</th>
+      <th>Total Carb (g)</th>
+      <th>Fiber (g)</th>
+      <th>Sugar (g)</th>
+      <th>Protein (g)</th>
     </tr>
     
     <% @t_recipe.each do |tbl| %>
@@ -100,20 +102,21 @@
     </tr>
     <% end %>
   </table>
-
+<p class="whitespace10px"></p>  
+<p class="whitespace10px"></p>  
 
 
 <!--Allergens -->
   <p class="sectionheader">Allergens: </p>  
   <table class="table2">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
-    <col style="width:5%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
+    <col style="width:12%">
    
     
     <tr class="tableheader1">
@@ -140,7 +143,8 @@
       </tr>
     <% end %>
   </table>
-
+<p class="whitespace10px"></p>  
+<p class="whitespace10px"></p>  
 
 <!--Ingredients List -->
   <p class="sectionheader">Ingredients List: </p>  
